objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derived_Parent_Segment1__c</fullName>
        <label>Derived Parent Segment1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derived_Segment1__c</fullName>
        <label>Derived Segment1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISAM_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISAM_Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_0_Parent_Name__c</fullName>
        <label>Level 0 Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_10_Territory__c</fullName>
        <label>Level 09 Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_11_Territory__c</fullName>
        <label>Level 10 Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_12_Territory__c</fullName>
        <label>Level 11 Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Parent_Name__c</fullName>
        <label>Level 1 Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowest_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lowest Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_ID__c</fullName>
        <label>Node ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Lowest_level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Node_Lowest_level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_Type__c</fullName>
        <label>Node Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Operation</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Theatre-ACCT</fullName>
                </value>
                <value>
                    <fullName>District/Team</fullName>
                </value>
                <value>
                    <fullName>Market LOB</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
                <value>
                    <fullName>Super Theater</fullName>
                </value>
                <value>
                    <fullName>Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCH_Territory_Type__c</fullName>
        <label>OCH_Territory_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT_SEGMENT1__c</fullName>
        <label>Parent Segment ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_TYPE__c</fullName>
        <label>POC_TYPE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Node_ID__c</fullName>
        <label>Parent Node ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territories_Reporting__c</fullName>
        <formula>Level_1_Territory__c &amp; " | " &amp; Level_2_Territory__c &amp; " | " &amp; Level_3_Territory__c &amp; " | " &amp; Level_4_Territory__c &amp; " | " &amp; Level_5_Territory__c &amp; " | " &amp; Level_6_Territory__c &amp; " | " &amp; Level_7_Territory__c &amp; " | " &amp; Level_8_Territory__c &amp; " | " &amp; Level_9_Territory__c &amp; " | " &amp; Level_10_Territory__c &amp; " | " &amp; Level_11_Territory__c &amp; " | " &amp; Level_12_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territories Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territories__c</fullName>
        <label>Parent Territories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Territory_Description__c</fullName>
        <label>Parent Territory Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_ID__c</fullName>
        <label>Position ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STT_Territory_ID__c</fullName>
        <label>STT Territory ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Coverage_Code__c</fullName>
        <label>Sales Coverage Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment1__c</fullName>
        <label>Segment1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <label>Structure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sales_Coverage_Code__c</fullName>
        <label>Sub Sales Coverage Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Agent_ID__c</fullName>
        <label>Team Agent ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory_ID_18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Level__c</fullName>
        <label>Territory Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <label>Cisco Territory Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>CA MGR</fullName>
                </value>
                <value>
                    <fullName>CR MGR</fullName>
                </value>
                <value>
                    <fullName>GAM</fullName>
                </value>
                <value>
                    <fullName>GL MGR</fullName>
                </value>
                <value>
                    <fullName>GSM</fullName>
                </value>
                <value>
                    <fullName>IS MGR</fullName>
                </value>
                <value>
                    <fullName>ISAM</fullName>
                </value>
                <value>
                    <fullName>SAM</fullName>
                </value>
                <value>
                    <fullName>SSR</fullName>
                </value>
                <value>
                    <fullName>TEAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>